# emberyx

./: .dockerignore  .gitattributes  .gitignore  CLAUDE.md  README.md  bunfig.toml  codedb.snapshot  package.json  turbo.json
.github/workflows/: release.yml  test.yml  warm-cache.yml
apps/desktop/: bun-test-setup.ts  bunfig.toml  index.html  package.json  tsconfig.node.json  vitest.config.ts  vitest.setup.ts
apps/desktop/src/: App.tsx  index.css  main.tsx  types.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: agent.rs  ask.rs  defs.rs  dokploy.rs  error.rs  files.rs  fs_walk.rs  git.rs  hooks.rs  icon.rs  lib.rs  openrouter.rs  pty.rs  search.rs  slash.rs  threads.rs  usage.rs  workspace.rs
apps/desktop/src/components/: AgentChips.tsx  AgentPanel.tsx  AttentionBanner.tsx  ChangesPanel.tsx  ChatComposer.tsx  ChatPane.tsx  CommandPalette.tsx  ContextBar.tsx  DevMenu.tsx  DevPanel.tsx  DokployLogsPane.tsx  DokployMenu.tsx  EditorPane.tsx  FileFinder.tsx  GitActions.tsx  GitRewind.tsx  HeaderBar.tsx  Markdown.test.tsx  Markdown.tsx  MentionMenu.tsx  ProjectTabStrip.tsx  SessionPanes.tsx  SessionTabStrip.tsx  SidePanel.tsx  (+9 more)
apps/web/: Dockerfile  astro.config.mjs  nginx.conf  package.json
docs/: design-log.md  session-transcript.jsonl
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: dokploy.rs  git.rs  lib.rs  main.rs  pty.rs  usage.rs  workspace.rs
src/components/: AttentionBanner.tsx  ChangesPanel.tsx  DevMenu.tsx  SettingsDialog.tsx  TabCloseButton.tsx  TerminalPane.tsx
src/hooks/: useAgentEvents.ts  useProjects.ts  useSessions.ts  useShortcuts.ts
src/lib/: changes.ts  pricing.ts  recents.ts  settings.ts  status.ts  update.ts
(+77 files in other folders)
