[package]
name = "emberyx"
version = "0.1.9"
description = "Desktop cockpit for AI coding agents — run Claude Code across projects in integrated terminals."
authors = ["Jiri Machynka <machynka.j@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "emberyx_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
base64 = "0.22"
glob = "0.3"
regex = "1"
tiny_http = "0.12"
ureq = { version = "2", features = ["json"] }

# Updater is desktop-only (no Android/iOS build).
[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2"

# Optimize release builds: full LTO + single codegen unit for faster hot paths
# (PTY read loop, JSONL usage parsing) and a smaller, stripped binary.
[profile.release]
opt-level = 3
# Thin LTO + parallel codegen: most of fat-LTO's wins at a fraction of the CI
# link time. The Rust side is I/O-bound (PTY, git, HTTP), so max codegen tuning
# buys ~nothing at runtime.
lto = "thin"
codegen-units = 16
strip = true
panic = "abort"

